兼容 unix